spade-tests/src/snapshots/spade_tests__typeinference__turbofish_param_number_mismatch.snap
---
source: spade-tests/src/typeinference.rs
---
fn ret_int<#uint A, #uint B>() -> int<8> {
    0
}

fn test() {
    let x: int<8> = ret_int::<10>();
}


error: Too few arguments. Expected 2, got 1
  ┌─ testinput:6:31
  │
6 │     let x: int<8> = ret_int::<10>();
  │                               ^^ Missing 1 argument
  │
  = Consider providing the argument
  │
6 │     let x: int<8> = ret_int::<10, /* B */>();
  │                                 +++++++++
